--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ContactsActivity">
 
+    <!--title-->
     <TextView
         android:id="@+id/contacts_text"
         android:layout_width="wrap_content"
@@ -19,19 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/contacts_text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
-        android:text="@string/contacts"
-        android:textColor="@color/textcolour"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <!--subtitle-->
     <TextView
         android:id="@+id/editEmergency"
         android:layout_width="wrap_content"
@@ -44,26 +33,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contacts_text" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="152dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="54dp"
-        android:text="@string/add_contact_text"
-        android:textAllCaps="false"
-        app:cornerRadius="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editEmergency"
-        tools:ignore="TextContrastCheck" />
+        <!--input name, number-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/addContact"
+            android:layout_height="wrap_content"
+            android:layout_width="200dp"/>
 
+        <!--submit-->
+        <Button
+            android:id="@+id/subContact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save" />
+
+    </LinearLayout>
+
+    <!--emergency button-->
     <Button
         android:id="@+id/random_button"
         android:layout_width="153dp"
@@ -72,10 +62,10 @@
         android:layout_marginBottom="50dp"
         android:fontFamily="sans-serif"
         android:text="@string/send_alert"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textAllCaps="false"
         app:backgroundTint="@color/alertButton"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
