--- a/app/src/main/res/layout/activity_notifcations.xml
+++ b/app/src/main/res/layout/activity_notifcations.xml
@@ -62,10 +62,11 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/menu_icon"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="25dp"
+                    android:clickable="true"
                     android:contentDescription="@string/menu_icon"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
