--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -103,6 +103,8 @@
             app:layout_constraintEnd_toStartOf="parent" />
 
         <!--map-->
+
+        <!--emergency button-->
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -117,7 +119,6 @@
             tools:context=".MapsActivity"
             tools:layout="@layout/activity_main" />
 
-        <!--emergency button-->
         <Button
             android:id="@+id/random_button"
             android:layout_width="153dp"
@@ -138,11 +139,22 @@
             android:id="@+id/routeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginBottom="56dp"
+            android:checked="true"
             android:textOff="@string/toggleButtonOff"
             android:textOn="@string/toggleButtonOn"
-            android:checked="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/checkin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="608dp"
+            android:text="Checkin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
