--- a/app/src/main/res/layout/activity_notifcations.xml
+++ b/app/src/main/res/layout/activity_notifcations.xml
@@ -150,7 +150,7 @@
 
         <!--submit-->
         <Button
-            android:id="@+id/subContact"
+            android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="216dp"
