--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -78,12 +78,16 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.AppBarLayout>
         <!--title-->
+
+        <!--emergency button-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingStart="25dp"
             android:orientation="vertical"
-            tools:context="com.printallelementsofarraylist_android_examples.com.MainActivity">
+            android:paddingStart="25dp"
+            tools:context="com.printallelementsofarraylist_android_examples.com.MainActivity"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
 
             <TextView
                 android:id="@+id/contacts_text"
@@ -110,8 +114,8 @@
                 android:layout_height="46dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="15dp"
-                android:gravity="center|center_horizontal"
                 android:drawableRight="@drawable/person_add"
+                android:gravity="center|center_horizontal"
                 android:hint="Pick Contact"
                 android:inputType="textPersonName" />
 
@@ -130,14 +134,66 @@
                 android:layout_height="wrap_content"
                 android:text="@string/save_text" />
 
-            <ListView
-                android:id="@+id/contacts_list"
-                android:layout_width="350dp"
-                android:layout_height="260dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginRight="25dp"
+                android:orientation="vertical"
+                tools:layout_editor_absoluteX="25dp"
+                tools:layout_editor_absoluteY="622dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    tools:layout_editor_absoluteX="25dp"
+                    tools:layout_editor_absoluteY="622dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Name"
+                        android:gravity="center"
+                        tools:ignore="RtlCompat"
+                        android:textColor="@color/black"
+                        />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Number"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:orientation="horizontal"
+                    tools:layout_editor_absoluteX="25dp"
+                    tools:layout_editor_absoluteY="622dp">
+
+                    <ListView
+                        android:id="@+id/names_list"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:scrollbarSize="0dp"/>
+                    <ListView
+                        android:id="@+id/number_list"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:scrollbarSize="0dp"/>
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <!--emergency button-->
         <Button
             android:id="@+id/random_button"
             android:layout_width="153dp"
@@ -155,6 +211,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="MissingConstraints" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_menu"
