--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -120,7 +120,7 @@
             tools:layout="@layout/activity_main" />
 
         <Button
-            android:id="@+id/random_button"
+            android:id="@+id/alert_button"
             android:layout_width="153dp"
             android:layout_height="56dp"
             android:layout_marginEnd="25dp"
